{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 480,
  "lineage": "6d111635-13f5-7e8e-a35d-5e280e943a7d",
  "resources": [
    {
      "module": "module.nicc01",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet_azure",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic01",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.32.0/22",
            "address_prefixes": [
              "172.27.32.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET",
            "name": "LP-Prod-DMZ-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic02",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.32.0/22",
            "address_prefixes": [
              "172.27.32.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET",
            "name": "LP-Prod-DMZ-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic03",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.32.0/22",
            "address_prefixes": [
              "172.27.32.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET",
            "name": "LP-Prod-DMZ-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic04",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.32.0/22",
            "address_prefixes": [
              "172.27.32.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET",
            "name": "LP-Prod-DMZ-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic05",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.132.0/24",
            "address_prefixes": [
              "172.27.132.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET",
            "name": "LP-Prod-AD-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic06",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.132.0/24",
            "address_prefixes": [
              "172.27.132.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET",
            "name": "LP-Prod-AD-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic07",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.16.0/22",
            "address_prefixes": [
              "172.27.16.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET",
            "name": "LP-Prod-Inside-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic08",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.16.0/22",
            "address_prefixes": [
              "172.27.16.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET",
            "name": "LP-Prod-Inside-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic09",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.16.0/22",
            "address_prefixes": [
              "172.27.16.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET",
            "name": "LP-Prod-Inside-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic10",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.16.0/22",
            "address_prefixes": [
              "172.27.16.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET",
            "name": "LP-Prod-Inside-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        },
        {
          "index_key": "nic11",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.128.0/27",
            "address_prefixes": [
              "172.27.128.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Jump-EUS-SNET",
            "name": "LP-Prod-Jump-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          }
        }
      ]
    },
    {
      "module": "module.nicc01",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic01",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web1-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.234",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web1-NIC",
            "private_ip_address": "172.27.32.234",
            "private_ip_addresses": [
              "172.27.32.234"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic02",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web2-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.235",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web2-NIC",
            "private_ip_address": "172.27.32.235",
            "private_ip_addresses": [
              "172.27.32.235"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic03",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web3-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web3_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.236",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web3-NIC",
            "private_ip_address": "172.27.32.236",
            "private_ip_addresses": [
              "172.27.32.236"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic04",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web4-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web4_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.237",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web4-NIC",
            "private_ip_address": "172.27.32.237",
            "private_ip_addresses": [
              "172.27.32.237"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic05",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD1-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Ad1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.132.87",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-AD1-NIC",
            "private_ip_address": "172.27.132.87",
            "private_ip_addresses": [
              "172.27.132.87"
            ],
            "resource_group_name": "LP-Prod-AD-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic06",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD2-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Ad2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.132.187",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-AD2-NIC",
            "private_ip_address": "172.27.132.187",
            "private_ip_addresses": [
              "172.27.132.187"
            ],
            "resource_group_name": "LP-Prod-AD-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic07",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search1-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "search1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.79",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search1-NIC",
            "private_ip_address": "172.27.16.79",
            "private_ip_addresses": [
              "172.27.16.79"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic08",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search2-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "search2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.224",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search2-NIC",
            "private_ip_address": "172.27.16.224",
            "private_ip_addresses": [
              "172.27.16.224"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic09",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search3-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "search3_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.225",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search3-NIC",
            "private_ip_address": "172.27.16.225",
            "private_ip_addresses": [
              "172.27.16.225"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic10",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search4-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "search4_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.99",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search4-NIC",
            "private_ip_address": "172.27.16.99",
            "private_ip_addresses": [
              "172.27.16.99"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "nic11",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Jump-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Jumpbox-NIC",
            "internal_domain_name_suffix": "abjdmpge51quvmbqz3j3fhk0fe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "jumpbox_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.128.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Jump-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Jumpbox-NIC",
            "private_ip_address": "172.27.128.10",
            "private_ip_addresses": [
              "172.27.128.10"
            ],
            "resource_group_name": "LP-Prod-Jump-EUS-RG"
          },
          "dependencies": [
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_creation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web1-NSG",
            "location": "eastus",
            "name": "LP-Prod-Web1-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg02",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web2-NSG",
            "location": "eastus",
            "name": "LP-Prod-Web2-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg03",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web3-NSG",
            "location": "eastus",
            "name": "LP-Prod-Web3-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg04",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web4-NSG",
            "location": "eastus",
            "name": "LP-Prod-Web4-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg05",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-AD1-NSG",
            "location": "eastus",
            "name": "LP-Prod-AD1-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg06",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-AD2-NSG",
            "location": "eastus",
            "name": "LP-Prod-AD2-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg07",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search1-NSG",
            "location": "eastus",
            "name": "LP-Prod-Search1-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg08",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search2-NSG",
            "location": "eastus",
            "name": "LP-Prod-Search2-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg09",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search3-NSG",
            "location": "eastus",
            "name": "LP-Prod-Search3-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg10",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search4-NSG",
            "location": "eastus",
            "name": "LP-Prod-Search4-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": "nsg11",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Jumpbox-NSG",
            "location": "eastus",
            "name": "LP-Prod-Jumpbox-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_nic",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "asso01",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web1-NIC",
            "ip_configuration": [
              {
                "name": "web1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.234",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web1-NIC",
            "private_ip_address": "172.27.32.234",
            "private_ip_addresses": [
              "172.27.32.234"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          }
        },
        {
          "index_key": "asso02",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web2-NIC",
            "ip_configuration": [
              {
                "name": "web2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.235",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web2-NIC",
            "private_ip_address": "172.27.32.235",
            "private_ip_addresses": [
              "172.27.32.235"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          }
        },
        {
          "index_key": "asso03",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web3-NIC",
            "ip_configuration": [
              {
                "name": "web3_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.236",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web3-NIC",
            "private_ip_address": "172.27.32.236",
            "private_ip_addresses": [
              "172.27.32.236"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          }
        },
        {
          "index_key": "asso04",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web4-NIC",
            "ip_configuration": [
              {
                "name": "web4_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.237",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web4-NIC",
            "private_ip_address": "172.27.32.237",
            "private_ip_addresses": [
              "172.27.32.237"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          }
        },
        {
          "index_key": "asso05",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD1-NIC",
            "ip_configuration": [
              {
                "name": "Ad1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.132.87",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-AD1-NIC",
            "private_ip_address": "172.27.132.87",
            "private_ip_addresses": [
              "172.27.132.87"
            ],
            "resource_group_name": "LP-Prod-AD-EUS-RG"
          }
        },
        {
          "index_key": "asso06",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD2-NIC",
            "ip_configuration": [
              {
                "name": "Ad2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.132.187",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-AD2-NIC",
            "private_ip_address": "172.27.132.187",
            "private_ip_addresses": [
              "172.27.132.187"
            ],
            "resource_group_name": "LP-Prod-AD-EUS-RG"
          }
        },
        {
          "index_key": "asso07",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search1-NIC",
            "ip_configuration": [
              {
                "name": "search1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.79",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search1-NIC",
            "private_ip_address": "172.27.16.79",
            "private_ip_addresses": [
              "172.27.16.79"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          }
        },
        {
          "index_key": "asso08",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search2-NIC",
            "ip_configuration": [
              {
                "name": "search2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.224",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search2-NIC",
            "private_ip_address": "172.27.16.224",
            "private_ip_addresses": [
              "172.27.16.224"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          }
        },
        {
          "index_key": "asso09",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search3-NIC",
            "ip_configuration": [
              {
                "name": "search3_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.225",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search3-NIC",
            "private_ip_address": "172.27.16.225",
            "private_ip_addresses": [
              "172.27.16.225"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          }
        },
        {
          "index_key": "asso10",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search4-NIC",
            "ip_configuration": [
              {
                "name": "search4_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.99",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search4-NIC",
            "private_ip_address": "172.27.16.99",
            "private_ip_addresses": [
              "172.27.16.99"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          }
        },
        {
          "index_key": "asso11",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Jump-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Jumpbox-NIC",
            "ip_configuration": [
              {
                "name": "jumpbox_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.128.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Jump-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Jumpbox-NIC",
            "private_ip_address": "172.27.128.10",
            "private_ip_addresses": [
              "172.27.128.10"
            ],
            "resource_group_name": "LP-Prod-Jump-EUS-RG"
          }
        }
      ]
    },
    {
      "module": "module.nsg_nic",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg_creation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "asso01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web1-NSG",
            "location": "eastus",
            "name": "LP-Prod-Web1-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso02",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web2-NSG",
            "location": "eastus",
            "name": "LP-Prod-Web2-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso03",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web3-NSG",
            "location": "eastus",
            "name": "LP-Prod-Web3-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso04",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web4-NSG",
            "location": "eastus",
            "name": "LP-Prod-Web4-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso05",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-AD1-NSG",
            "location": "eastus",
            "name": "LP-Prod-AD1-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso06",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-AD2-NSG",
            "location": "eastus",
            "name": "LP-Prod-AD2-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso07",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search1-NSG",
            "location": "eastus",
            "name": "LP-Prod-Search1-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso08",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search2-NSG",
            "location": "eastus",
            "name": "LP-Prod-Search2-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso09",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search3-NSG",
            "location": "eastus",
            "name": "LP-Prod-Search3-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso10",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search4-NSG",
            "location": "eastus",
            "name": "LP-Prod-Search4-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "asso11",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Jumpbox-NSG",
            "location": "eastus",
            "name": "LP-Prod-Jumpbox-NSG",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nsg_nic",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "asso01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web1-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web1-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web1-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web1-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso02",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web2-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web2-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web2-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web2-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso03",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web3-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web3-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web3-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web3-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso04",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web4-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web4-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web4-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Web4-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso05",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD1-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-AD1-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD1-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-AD1-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso06",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD2-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-AD2-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD2-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-AD2-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso07",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search1-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search1-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search1-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search1-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso08",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search2-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search2-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search2-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search2-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso09",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search3-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search3-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search3-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search3-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso10",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search4-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search4-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search4-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Search4-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "asso11",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Jump-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Jumpbox-NIC|/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Jumpbox-NSG",
            "network_interface_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Jump-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Jumpbox-NIC",
            "network_security_group_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/networkSecurityGroups/LP-Prod-Jumpbox-NSG"
          },
          "dependencies": [
            "module.nicc01.azurerm_network_interface.network_interface",
            "module.nicc01.data.azurerm_subnet.subnet_azure",
            "module.nsg.azurerm_network_security_group.nsg_creation",
            "module.nsg_nic.data.azurerm_network_interface.network_interface",
            "module.nsg_nic.data.azurerm_network_security_group.nsg_creation",
            "module.rg.azurerm_resource_group.resource_group",
            "module.subnet.azurerm_subnet.subnet_azure",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_azure",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet01",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.27.96.0/20"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-NWMGMT-EUS-SNET",
            "name": "LP-Prod-NWMGMT-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "subnet02",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.27.132.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET",
            "name": "LP-Prod-AD-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "subnet03",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.27.16.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET",
            "name": "LP-Prod-Inside-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "subnet04",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.27.130.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DevOps-EUS-SNET",
            "name": "LP-Prod-DevOps-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "subnet05",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.27.32.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET",
            "name": "LP-Prod-DMZ-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "subnet06",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.27.128.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Jump-EUS-SNET",
            "name": "LP-Prod-Jump-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": "subnet07",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.27.129.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Dev-Inside-EUS-SNET",
            "name": "LP-Dev-Inside-EUS-SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG",
            "virtual_network_name": "LP-EUS-VNET-01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web1-NIC",
            "ip_configuration": [
              {
                "name": "web1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.234",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web1-NIC",
            "private_ip_address": "172.27.32.234",
            "private_ip_addresses": [
              "172.27.32.234"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          }
        },
        {
          "index_key": "vm02",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web2-NIC",
            "ip_configuration": [
              {
                "name": "web2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.235",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web2-NIC",
            "private_ip_address": "172.27.32.235",
            "private_ip_addresses": [
              "172.27.32.235"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          }
        },
        {
          "index_key": "vm03",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web3-NIC",
            "ip_configuration": [
              {
                "name": "web3_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.236",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web3-NIC",
            "private_ip_address": "172.27.32.236",
            "private_ip_addresses": [
              "172.27.32.236"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          }
        },
        {
          "index_key": "vm04",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-DMZ-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Web4-NIC",
            "ip_configuration": [
              {
                "name": "web4_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.32.237",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-DMZ-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Web4-NIC",
            "private_ip_address": "172.27.32.237",
            "private_ip_addresses": [
              "172.27.32.237"
            ],
            "resource_group_name": "LP-Prod-DMZ-EUS-RG"
          }
        },
        {
          "index_key": "vm05",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD1-NIC",
            "ip_configuration": [
              {
                "name": "Ad1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.132.87",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-AD1-NIC",
            "private_ip_address": "172.27.132.87",
            "private_ip_addresses": [
              "172.27.132.87"
            ],
            "resource_group_name": "LP-Prod-AD-EUS-RG"
          }
        },
        {
          "index_key": "vm06",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-AD-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-AD2-NIC",
            "ip_configuration": [
              {
                "name": "Ad2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.132.187",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-AD-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-AD2-NIC",
            "private_ip_address": "172.27.132.187",
            "private_ip_addresses": [
              "172.27.132.187"
            ],
            "resource_group_name": "LP-Prod-AD-EUS-RG"
          }
        },
        {
          "index_key": "vm07",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search1-NIC",
            "ip_configuration": [
              {
                "name": "search1_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.79",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search1-NIC",
            "private_ip_address": "172.27.16.79",
            "private_ip_addresses": [
              "172.27.16.79"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          }
        },
        {
          "index_key": "vm08",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search2-NIC",
            "ip_configuration": [
              {
                "name": "search2_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.224",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search2-NIC",
            "private_ip_address": "172.27.16.224",
            "private_ip_addresses": [
              "172.27.16.224"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          }
        },
        {
          "index_key": "vm09",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search3-NIC",
            "ip_configuration": [
              {
                "name": "search3_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.225",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search3-NIC",
            "private_ip_address": "172.27.16.225",
            "private_ip_addresses": [
              "172.27.16.225"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          }
        },
        {
          "index_key": "vm10",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Inside-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Search4-NIC",
            "ip_configuration": [
              {
                "name": "search4_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.16.99",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Inside-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Search4-NIC",
            "private_ip_address": "172.27.16.99",
            "private_ip_addresses": [
              "172.27.16.99"
            ],
            "resource_group_name": "LP-Prod-Inside-EUS-RG"
          }
        },
        {
          "index_key": "vm11",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-Jump-EUS-RG/providers/Microsoft.Network/networkInterfaces/LP-Prod-EUS-Jumpbox-NIC",
            "ip_configuration": [
              {
                "name": "jumpbox_primary_ip",
                "primary": true,
                "private_ip_address": "172.27.128.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01/subnets/LP-Prod-Jump-EUS-SNET"
              }
            ],
            "location": "eastus",
            "name": "LP-Prod-EUS-Jumpbox-NIC",
            "private_ip_address": "172.27.128.10",
            "private_ip_addresses": [
              "172.27.128.10"
            ],
            "resource_group_name": "LP-Prod-Jump-EUS-RG"
          }
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "my-vnet01",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.27.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3c365200-fec4-4ae1-b030-cf53d29d5a2c",
            "id": "/subscriptions/1ff163a5-90c8-4569-8ec9-0d1c0a574abe/resourceGroups/LP-Prod-NWMGMT-EUS-RG/providers/Microsoft.Network/virtualNetworks/LP-EUS-VNET-01",
            "location": "eastus",
            "name": "LP-EUS-VNET-01",
            "resource_group_name": "LP-Prod-NWMGMT-EUS-RG"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}